# zoof

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: prompt_zoof_on_colab.ipynb
src/: config.py  model.py  prompt_zoof.py  utils.py
src/zoof_v1/: prompt_zoof.py
src/zoof_v1_2/: model.py
