[project]
name = "zoof"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "rotary-embedding-torch>=0.8.9",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
# Directories to check
src = ["src", "tests"]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
# Enable some extra rule sets if you like
select = ["E", "F", "W", "I"]  # errors, flakes, warnings, imports

[tool.ruff.format]
# Ruff formatter settings
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
